--- a/MusicStore/Resources/Templates/User.xaml
+++ b/MusicStore/Resources/Templates/User.xaml
@@ -1,8 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                     xmlns:data="clr-namespace:MusicStore.Data"
+                    xmlns:data="clr-namespace:MusicStore.Data"
+                    xmlns:vm="clr-namespace:MusicStore.ViewModels" 
 >
+    
     <DataTemplate DataType="{x:Type data:TabMusicRecord}"  x:Key="RecordCard">
         <materialDesign:Card  Background="Beige" >
             <StackPanel   Margin="10">
@@ -29,18 +31,20 @@
         </materialDesign:Card>
     </DataTemplate>
 
-    <DataTemplate DataType="{x:Type ListViewItem}"  x:Key="BasketCard">
+    <DataTemplate DataType="{x:Type data:TabPurchaseHistory}"  x:Key="BasketCard" >
+        
         <materialDesign:Card >
             <DockPanel >
                 <TextBlock Margin="10">
-                 Album:<TextBlock Text=""/>
+                 Album: <TextBlock Text="{Binding MusicRecord.Name}"/>$
                  </TextBlock>
                 <TextBlock Margin="10">
-                 Cost:<TextBlock Text=""/>
+                 Cost by one: <TextBlock Text="{Binding MusicRecord.Cost}"/>$
                  </TextBlock>
-                <Button Margin="10" Height="25">+</Button>
-                <TextBlock Margin="15" >1</TextBlock>
-                <Button Margin="10"   Height="25" Background="Pink" >-</Button>
+
+                <Button Margin="10" Command="{Binding DataContext.Increment , RelativeSource={RelativeSource AncestorType=Window,Mode=FindAncestor}}" Height="25" CommandParameter="{Binding MusicRecordId}">+</Button>
+                <TextBlock Margin="15"   Text="{Binding RecordsCount, UpdateSourceTrigger=PropertyChanged}" />
+                <Button Margin="10"  Command="{Binding DataContext.Decrement , RelativeSource={RelativeSource AncestorType=Window,Mode=FindAncestor}}" Height="25" Background="Pink" CommandParameter="{Binding MusicRecordId}" >-</Button>
             </DockPanel>
         </materialDesign:Card>
     </DataTemplate>
