--- a/MusicStore/Views/Windows/AdminWindow.xaml
+++ b/MusicStore/Views/Windows/AdminWindow.xaml
@@ -2,11 +2,114 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicStore.Views.Windows"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:MusicStore.ViewModels"
+        Title="AdminWindow"
+        xmlns:closer="clr-namespace:MusicStore.Infrastructure"
+        Width="800"
+        Height="450"
         mc:Ignorable="d"
-        Title="AdminWindow" Height="450" Width="800">
+        closer:WindowCloser.EnableWindowClosing="True">
+    <Window.DataContext>
+        <vm:AdminModelView />
+    </Window.DataContext>
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/templates/admin.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition Width=".4*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height=".1*" />
+            <RowDefinition Height="0.2*" />
+            <RowDefinition />
+            <RowDefinition Height=".3*" />
+        </Grid.RowDefinitions>
+
+        <TabControl Grid.Row="1"
+                    Grid.RowSpan="2"
+                    Grid.ColumnSpan="4"
+                    TabStripPlacement="Left">
+
+
+            <TabItem>
+                <TabItem.Header>
+                    <DockPanel>
+                        <materialDesign:PackIcon Height="20" Kind="AddBold" />
+                        <TextBlock FontSize="15" Foreground="Black">Добавить пластинку</TextBlock>
+                    </DockPanel>
+                </TabItem.Header>
+                <ScrollViewer>
+                    <StackPanel Margin="5">
+                        <ListView>
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel Width="450" />
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+                        </ListView>
+                    </StackPanel>
+                </ScrollViewer>
+
+            </TabItem>
+
+            <TabItem>
+                <TabItem.Header>
+                    <DockPanel>
+                        <materialDesign:PackIcon Height="20" Kind="RemoveBold" />
+                        <TextBlock FontSize="15" Foreground="Black">Удалить пластинку</TextBlock>
+                    </DockPanel>
+                </TabItem.Header>
+                <ScrollViewer>
+                    <StackPanel Margin="5">
+                        <ListView>
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel Width="450" />
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+                        </ListView>
+                    </StackPanel>
+                </ScrollViewer>
+
+            </TabItem>
+
+
+
+
+        </TabControl>
+        <Image Grid.Row="1"
+               Grid.Column="4"
+               Height="30"
+               Source="/src/Sign-in-icon.jpg" />
+        <Button Grid.Row="2"
+                   Grid.Column="4"
+                   HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="logout" Background="Red" Height="30">
+           
+        </Button>
+        <TextBlock Grid.Row="2"
+                   Grid.Column="4"
+                   HorizontalAlignment="Center" VerticalAlignment="Top" Text="Admin name"    Height="30">
+
+        </TextBlock>
+        <Image Grid.Row="3"
+               Margin="5"
+               HorizontalAlignment="Left"
+               Source="/src/arph.png" />
+
+
     </Grid>
 </Window>
