--- a/MusicStore/Views/Windows/MainWindow.xaml
+++ b/MusicStore/Views/Windows/MainWindow.xaml
@@ -3,18 +3,25 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:MusicStore.ViewModels"
         xmlns:local="clr-namespace:MusicStore"
+        xmlns:closer="clr-namespace:MusicStore.Infrastructure"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"     
-        Title="Login" Height="400" Width="400">
+        Title="Login" Height="400" Width="400"
+        closer:WindowCloser.EnableWindowClosing="True"
+        >
+    <Window.DataContext>
+        <vm:LoginModelView></vm:LoginModelView>
+    </Window.DataContext>
 
-       
-        <Border>
+
+    <Border>
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="/src/arph.png"  Height="20" />
-            <TextBox   materialDesign:HintAssist.Hint="Song or Author" Text="" Margin="10" />
-            <TextBox   materialDesign:HintAssist.Hint="Song or Author" Text=""  Margin="10" Cursor="Arrow"    />
-            <Button  Content="Login"  Height="28" Margin="10"/>
+            <TextBox   materialDesign:HintAssist.Hint="User Login" Text="{Binding SetLogin , UpdateSourceTrigger=LostFocus}" Margin="10" />
+            <TextBox   materialDesign:HintAssist.Hint="User Password or Author" Text="{Binding SetPassword, UpdateSourceTrigger=LostFocus}"  Margin="10" Cursor="Arrow"    />
+            <Button  Content="Login"  Height="28" Margin="10" Command="{Binding Login}"/>
         </StackPanel>
         </Border>
      
